@@ -19,6 +19,7 @@ BUGFIX:
 - fix for pa_rule-merge if NEGATION of original Rule and RuleToCompare differ
 - fix for different classes are made
 - fix class-NatRule | rewriteSNAT_XML() fix rewrite of IP-Address now value() is used
+- fix service-merger | fix  algorithm=SameDstSrcPorts for single FW vsys
 
 
 ------------------------------------------------------------------------------------------------------------------------
